--- a/application/views/scripts/formulaire/edit.phtml
+++ b/application/views/scripts/formulaire/edit.phtml
@@ -1,9 +1,14 @@
 <link rel="stylesheet" href="/css/formulaire.css" />
+<!-- TODO Customiser ça pour que ça rende mieux -->
+<a href="/formulaire">
+    <i class="icon-arrow-left"></i>
+    Retourner sur la liste des formulaires
+</a>
 <div class="row-fluid">
     <div class="span4 infos-rubrique">
         <form action class="form-inline" method="post">
             <label for="nom_rubrique">Nom de la rubrique</label>
-            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?php echo $this->rubrique['NOM']; ?>">
+            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?php echo $this->rubrique['NOM']; ?>" required>
             <label for="afficher_rubrique">Afficher la rubrique par défaut</label>
             <input
                 type="hidden"
@@ -22,5 +27,37 @@
                 <button type="submit" class="btn btn-success">Sauvegarder la rubrique</button>
             </div>
         </form>
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span4">
+        <?php echo $this->fieldForm; ?>
+    </div>
+
+    <div id="saved-fields" class="span6 offset1">
+        <?php if(count($this->champs) > 0): ?>
+            <table class="table table-bordered table-condensed">
+                <thead>
+                    <tr>
+                        <th>Nom du champ</th>
+                        <th>Type du champ</th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <?php foreach($this->champs as $champ): ?>
+                        <tr>
+                            <td><?php echo $champ['NOM']; ?></td>
+                            <td><?php echo $champ['TYPE']; ?></td>
+                            <td>
+                                <div><a href="/formulaire/edit/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE']; ?>/champ/<?php echo $champ['ID_CHAMP']; ?>">Modifier</a></div>
+                                <div><a href="/formulaire/delete/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE']; ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Supprimer</a></div>
+                            </td>
+                        </tr>
+                    <?php endforeach ?>
+                </tbody>
+            </table>
+        <?php endif ?>
     </div>
 </div>
