Modification d'un champ

--- a/public/css/formulaire.css
+++ b/public/css/formulaire.css
@@ -2,7 +2,8 @@ form #save-element {
     margin: 0;
 }
 
-.form-inline input {
+.form-inline input,
+.form-inline select {
     margin-bottom: 10px;
 }
 
@@ -15,7 +16,8 @@ div[id^='saved-rubriques-'] a {
     display: block;
 }
 
-.infos-rubrique {
+.infos-rubrique,
+.infos-champ {
 	border: 1px dotted #818183;
 	padding: 20px 20px 20px 20px;
 	margin-bottom: 20px;
