--- a/application/views/scripts/formulaire/edit.phtml
+++ b/application/views/scripts/formulaire/edit.phtml
@@ -1,14 +1,16 @@
 <link rel="stylesheet" href="/css/formulaire.css" />
-<!-- TODO Customiser ça pour que ça rende mieux -->
+
 <a href="/formulaire">
     <i class="icon-arrow-left"></i>
     Retourner sur la liste des formulaires
 </a>
+
 <div class="row-fluid">
+    <h3>Informations sur la rubrique</h3>
     <div class="span4 infos-rubrique">
         <form action class="form-inline" method="post">
             <label for="nom_rubrique">Nom de la rubrique</label>
-            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?php echo $this->rubrique['NOM']; ?>" required>
+            <input type="text" name="nom_rubrique" id="nom_rubrique" value="<?php echo $this->rubrique['NOM'] ?>" required>
             <label for="afficher_rubrique">Afficher la rubrique par défaut</label>
             <input
                 type="hidden"
@@ -19,7 +21,7 @@
                 type="checkbox"
                 name="afficher_rubrique"
                 value="1"
-                <?php echo $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : ''; ?>
+                <?php echo $this->rubrique['DEFAULT_DISPLAY'] ? 'checked' : '' ?>
             >
 
             <div class="pull-right">
@@ -32,10 +34,20 @@
 
 <div class="row-fluid">
     <div class="span4">
+        <h3>Informations sur le champ</h3>
+    </div>
+
+    <div class="span7 offset1">
+        <h3>Liste des champs</h3>
+    </div>
+</div>
+
+<div class="row-fluid">
+    <div class="span4 infos-champ">
         <?php echo $this->fieldForm; ?>
     </div>
 
-    <div id="saved-fields" class="span6 offset1">
+    <div id="saved-fields" class="span7 offset1">
         <?php if(count($this->champs) > 0): ?>
             <table class="table table-bordered table-condensed">
                 <thead>
@@ -48,11 +60,11 @@
                 <tbody>
                     <?php foreach($this->champs as $champ): ?>
                         <tr>
-                            <td><?php echo $champ['NOM']; ?></td>
-                            <td><?php echo $champ['TYPE']; ?></td>
+                            <td><?php echo $champ['NOM'] ?></td>
+                            <td><?php echo $champ['TYPE'] ?></td>
                             <td>
-                                <div><a href="/formulaire/edit/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE']; ?>/champ/<?php echo $champ['ID_CHAMP']; ?>">Modifier</a></div>
-                                <div><a href="/formulaire/delete/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE']; ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Supprimer</a></div>
+                                <div><a href="/formulaire/edit-champ/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE'] ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Modifier</a></div>
+                                <div><a href="/formulaire/delete-champ/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE'] ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Supprimer</a></div>
                             </td>
                         </tr>
                     <?php endforeach ?>
