--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -1,19 +1,32 @@
 <link rel="stylesheet" href="/css/formulaire.css" />
+
 <?php
     $arrayKeys = array_keys($this->formulaires);
     $lastKey = end($arrayKeys);
 ?>
 <?php foreach($this->formulaires as $key => $formulaire) : ?>
     <div class="row-fluid">
-        <h3>
-            <?php echo $formulaire['NOM']; ?>
-        </h3>
+        <h2>
+            <?php echo $formulaire['NOM'] ?>
+        </h2>
+    </div>
 
-        <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4">
+    <div class="row-fluid">
+        <div class="span4">
+            <h3>Informations sur la rubrique</h3>
+        </div>
+
+        <div class="span6 offset1">
+            <h3>Liste des rubriques</h3>
+        </div>
+    </div>
+
+    <div class="row-fluid">
+        <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4 infos-rubrique">
             <?php echo $this->form; ?>
         </div>
 
-        <div id="saved-rubriques-<?php echo $formulaire['NOM_INTERNE'] ?>" class="span6 offset1">
+        <div id="saved-rubriques-<?php echo $formulaire['NOM_INTERNE'] ?>" class="span7 offset1">
             <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
                 <table class="table table-bordered table-condensed">
                     <thead>
@@ -26,7 +39,7 @@
                     <tbody>
                         <?php foreach($formulaire['RUBRIQUES'] as $rubrique): ?>
                             <tr>
-                                <td><?php echo $rubrique['NOM']; ?></td>
+                                <td><?php echo $rubrique['NOM'] ?></td>
                                 <td>
                                     <?php if($rubrique['DEFAULT_DISPLAY']): ?>
                                         <p class="text-center">
@@ -35,7 +48,7 @@
                                     <?php endif ?>
                                 </td>
                                 <td>
-                                    <div><a href="/formulaire/edit/rubrique/<?php echo $rubrique['ID_RUBRIQUE']; ?>">Modifier</a></div>
+                                    <div><a href="/formulaire/edit/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">Modifier</a></div>
                                     <div><a href="/formulaire/delete/rubrique/<?php echo $rubrique['ID_RUBRIQUE'] ?>">Supprimer</a></div>
                                 </td>
                             </tr>
