--- a/application/views/scripts/formulaire/edit.phtml
+++ b/application/views/scripts/formulaire/edit.phtml
@@ -36,9 +36,10 @@
     <div class="span4">
         <h3>Informations sur le champ</h3>
     </div>
-
     <div class="span7 offset1">
-        <h3>Liste des champs</h3>
+        <?php if(count($this->champs) > 0): ?>
+            <h3>Liste des champs</h3>
+        <?php endif ?>
     </div>
 </div>
 
