--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -17,7 +17,9 @@
         </div>
 
         <div class="span6 offset1">
-            <h3>Liste des rubriques</h3>
+            <?php if(count($formulaire['RUBRIQUES']) > 0): ?>
+                <h3>Liste des rubriques</h3>
+            <?php endif ?>
         </div>
     </div>
 
