--- a/application/views/scripts/formulaire/index.phtml
+++ b/application/views/scripts/formulaire/index.phtml
@@ -25,7 +25,7 @@
 
     <div class="row-fluid">
         <div id="<?php echo $formulaire['NOM_INTERNE'] ?>" class="span4 infos-rubrique">
-            <?php echo $this->form; ?>
+            <?php echo $this->form ?>
         </div>
 
         <div id="saved-rubriques-<?php echo $formulaire['NOM_INTERNE'] ?>" class="span7 offset1">
