Corrections sur l'affichage des valeurs de liste

--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -81,6 +81,13 @@
                             <td>
                                 <?php echo $champ['TYPE'] ?>
                                 <?php if($champ['TYPE'] === 'Liste'): ?>
+                                    <?php if(count($champ['VALEURS']) === 0): ?>
+                                        <div class="alert">
+                                            <button type="button" class="close" data-dismiss="alert">&times;</button>
+                                            <strong>Attention !</strong> La liste ne possède aucune valeur, vous devriez en ajouter.
+                                        </div>
+                                    <?php endif ?>
+
                                     <ul>
                                         <?php foreach($champ['VALEURS'] as $valeur): ?>
                                             <li><?php echo $valeur['VALEUR'] ?></li>
