Suppression champ (l'autre c'était rubrique) ajax

--- a/public/css/formulaire.css
+++ b/public/css/formulaire.css
@@ -23,7 +23,7 @@ div[id^='saved-rubriques-'] a {
 	margin-bottom: 20px;
 }
 
-#edit-rubrique #div-valeurs-liste {
+#edit-rubrique #div-list-value {
     display: none;
 }
 
