--- a/application/views/scripts/formulaire/edit-rubrique.phtml
+++ b/application/views/scripts/formulaire/edit-rubrique.phtml
@@ -45,17 +45,17 @@
 
 <div id="edit-rubrique" class="row-fluid">
     <div class="span4 infos-champ">
-        <form id="field-form" enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
+        <form enctype="application/x-www-form-urlencoded" method="post" class="form-inline" action>
             <?php echo $this->fieldForm->nom_champ ?>
             <?php echo $this->fieldForm->type_champ ?>
 
-            <div id="div-valeurs-liste">
+            <div id="div-list-value">
                 <h5>Définition des valeurs de la liste</h5>
                 <div class="row-fluid">
                     <a href='#' id='add-list-value'>Ajouter une valeur</a>
                 </div>
                 <div class="row-fluid">
-                    <div id="valeurs-liste" class="span10">
+                    <div id="list-value" class="span10">
                     </div>
                 </div>
             </div>
@@ -97,8 +97,7 @@
                             </td>
                             <td id="actions">
                                 <a href="/formulaire/edit-champ/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE'] ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Modifier</a>
-                                <!-- Faire un appel AJAX sur le supprimer pour ne pas avoir à recharger la page -->
-                                <a href="/formulaire/delete-champ/rubrique/<?php echo $this->rubrique['ID_RUBRIQUE'] ?>/champ/<?php echo $champ['ID_CHAMP'] ?>">Supprimer</a>
+                                <a href="#" data-id="<?php echo $champ['ID_CHAMP'] ?>" data-rubrique-id="<?php echo $this->rubrique['ID_RUBRIQUE'] ?>" class="delete-champ">Supprimer</a>
                             </td>
                         </tr>
                     <?php endforeach ?>
