--- a/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationcompterendu.phtml
@@ -1,7 +1,5 @@
 <?php
-
-use CatoTH\HTML2OpenDocument\Spreadsheet;
-
+$odt = new \CatoTH\HTML2OpenDocument\Text();
 
 function addChamp($odf,$nomOdf, $variable){
   try{
@@ -43,16 +41,33 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 				addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 				addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
 
-				addChamp($dossInfos,'descriptionEffectifDossier',$this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER']);
-                addChamp($dossInfos,'descriptionDegagementDossier',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_DOSSIER']);
-                addChamp($dossInfos,'descriptionEffectifEtablissement',$this->dossierComm[0]['DESCRIPTION_EFFECTIF_ETABLISSEMENT']);
-                addChamp($dossInfos,'descriptionDegagementEtablissement',$this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT']);
-				
-				$od = new \CatoTH\HTML2OpenDocument\Text();
-				$od->addHtmlTextBlock($this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER'],false);
-				$od->finishAndOutputOdt("montestfichier.odt");
-				var_dump($od);
-				
+				/**
+				 *instanciation de la Lib permettant de convertir le HTML en format string  
+				 *Attention ! Il ne faut pas mettre de style sur le texte dans le wiziwig sinon le parsing ne se realisera pas 
+				 */
+				$html2Text = new \kranemora\Html2Text\Html2Text;
+				/**
+				 * Tableau des champs effectif degagment $k = nom du champ en champ de fusion, $v = valeur du champ
+				 */
+				$tabEffDegKV = array(
+					'descriptionEffectifDossier' => $this->dossierComm[0]['DESCRIPTION_EFFECTIF_DOSSIER'],
+					'descriptionDegagementDossier' => $this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_DOSSIER'],
+					'descriptionEffectifEtablissement' => $this->dossierComm[0]['DESCRIPTION_EFFECTIF_ETABLISSEMENT'],
+					'descriptionDegagementEtablissement' => $this->dossierComm[0]['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT'],
+				);
+				/**
+				 * Foreach sur le tableau pour attribuer les valeurs dans les champs de fusion
+				 * Attention ! Si la valeur est NULL ou qu'un style est appliqué depuis le wiziwig le resultat sera : ""
+				 */
+				foreach($tabEffDegKV as $k => $v){
+					var_dump($k,$v);
+					if(isset($v) && strlen($v) > 0 ){
+						addChamp($dossInfos,$k, $html2Text->convert($v));
+					}else{
+						addChamp($dossInfos,$k, "");
+					}
+				}
+			
 				$dateComm = new Zend_Date($this->dateComm);
 				addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
 
@@ -175,6 +190,7 @@ if (file_exists(REAL_DATA_PATH.DIRECTORY_SEPARATOR."uploads".DIRECTORY_SEPARATOR
 	}
 	$odf->mergeSegment($dossInfos);
 	$nouvellePJ = savePj($this->idComm,"Compte rendu du ");
+	
 
         $store = Zend_Controller_Front::getInstance()->getParam('bootstrap')->getResource('dataStore');
         $path = $store->getFilePath($nouvellePJ, 'dateCommission', $this->idComm, true);
@@ -204,3 +220,4 @@ function savePj($dateCommId,$libelleDocument){
 
 	return $nouvellePJ;
 }
+?>
