--- a/application/views/scripts/calendrier-des-commissions/generationpv.phtml
+++ b/application/views/scripts/calendrier-des-commissions/generationpv.phtml
@@ -120,14 +120,35 @@ foreach($this->membresFiles as $val => $membre){
 						if(isset($commune["LIBELLE_COMMUNE"])){
 							addChamp($dossInfos,'communeDossier', $commune["LIBELLE_COMMUNE"]);
 						}
-
 						addChamp($dossInfos,'objetDossier', $dossierInfos['OBJET_DOSSIER']);
 						addChamp($dossInfos,'natureDossier', $dossierInfos["LIBELLE_DOSSIERNATURE"]);
-						//addChamp($dossInfos,'effectifEtDegagement',$dossierInfos["effectifEtDegagement"]);
-						addChamp($dossInfos,'descriptionEffectifDossier',$dossierInfos["DESCRIPTION_EFFECTIF_DOSSIER"]);
-						addChamp($dossInfos,'descriptionDegagementDossier',$dossierInfos["DESCRIPTION_DEGAGEMENT_DOSSIER"]);
-						addChamp($dossInfos,'descriptionEffectifEtablissement',$dossierInfos["DESCRIPTION_EFFECTIF_ETABLISSEMENT"]);
-						addChamp($dossInfos,'descriptionDegagementEtablissement',$dossierInfos["DESCRIPTION_DEGAGEMENT_ETABLISSEMENT"]);
+
+						/**
+						*instanciation de la Lib permettant de convertir le HTML en format string  
+						*Attention ! Il ne faut pas mettre de style sur le texte dans le wiziwig sinon le parsing ne se realisera pas 
+						*/
+						$html2Text = new \kranemora\Html2Text\Html2Text;
+						/**
+						 * Tableau des champs effectif degagment $k = nom du champ en champ de fusion, $v = valeur du champ
+						 */
+						$tabEffDegKV = array(
+							'descriptionEffectifDossier' => $dossierInfos['DESCRIPTION_EFFECTIF_DOSSIER'],
+							'descriptionDegagementDossier' => $dossierInfos['DESCRIPTION_DEGAGEMENT_DOSSIER'],
+							'descriptionEffectifEtablissement' => $dossierInfos['DESCRIPTION_EFFECTIF_ETABLISSEMENT'],
+							'descriptionDegagementEtablissement' => $dossierInfos['DESCRIPTION_DEGAGEMENT_ETABLISSEMENT'],
+						);
+						/**
+						 * Foreach sur le tableau pour attribuer les valeurs dans les champs de fusion
+						 * Attention ! Si la valeur est NULL ou qu'un style est appliqué depuis le wiziwig le resultat sera : ""
+						 */
+						foreach($tabEffDegKV as $k => $v){
+							var_dump($k,$v);
+							if(isset($v) && strlen($v) > 0 ){
+								addChamp($dossInfos,$k, $html2Text->convert($v));
+							}else{
+								addChamp($dossInfos,$k, "");
+							}
+						}
 
 						$dateComm = new Zend_Date($this->dateComm);
 						addChamp($dossInfos,'dateCommission', $dateComm->get(Zend_Date::DAY." ".Zend_Date::MONTH_NAME." ".Zend_Date::YEAR));
