Affichage formulaire modification des informations

--- a/application/views/scripts/changement/index.phtml
+++ b/application/views/scripts/changement/index.phtml
@@ -17,6 +17,7 @@
 <script type='text/javascript'>
     tinymce.init({
         selector: '.tinyarea',
+        language: 'fr_FR',
         height: 150,
         menubar: false,
         statusbar: false,
