--- a/application/views/scripts/dossier/index.phtml
+++ b/application/views/scripts/dossier/index.phtml
@@ -48,6 +48,7 @@ $(document).ready(function() {
                 dialogAlerte.html(msg);
                 tinymce.init({
                     selector: '.tinyarea',
+                    language: 'fr_FR',
                     height: 220,
                     menubar: false,
                     statusbar: false,
