--- a/application/views/scripts/etablissement/index.phtml
+++ b/application/views/scripts/etablissement/index.phtml
@@ -680,6 +680,7 @@
                     dialogAlerte.html(msg);
                     tinymce.init({
                         selector: '.tinyarea',
+                        language: 'fr_FR',
                         height: 220,
                         menubar: false,
                         statusbar: false,
