Correction de l'affichage des valeurs

--- a/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
+++ b/application/views/scripts/etablissement/descriptif/descriptif-personnalise.phtml
@@ -41,7 +41,7 @@
                             <?php break;
                             // Case à cocher
                             case 6: ?>
-                                <input type='checkbox' readonly>
+                                <input type='checkbox' disabled>
                             <?php break;
                             default:
                                 break;
